# raycast

./: .gitignore  CMakeLists.txt  common.h  main.cpp  map.cpp  map.h  particles.cpp  particles.h  pfields.cpp  pfields.h  present.cpp  raycast.cpp  raycast.h  spatial.cpp  spatial.h  sprites.cpp  sprites.h  texture.cpp  texture.h  thing_imp.cpp  thing_player.cpp  things.cpp  things.h  vector.h
data/: sprites.txt  textures.txt
data/map/: e1m1.aseprite  e1m1.map
data/weapons/: pistol.aseprite
mapper/: CMakeLists.txt  main.cpp
